@@ -26,11 +26,15 @@ Extension modules
 - datetime changes:
 
   today() and now() now round system timestamps to the closest
-  microsecond <http://www.python.org/sf/661086>.
+  microsecond <http://www.python.org/sf/661086>.  This repairs an
+  irritation most likely seen on Windows systems.
 
   In dt.asdatetime(tz), if tz.utcoffset(dt) returns a duration,
   ValueError is raised if tz.dst(dt) returns None (2.3a1 treated it
-  as 0 instead).
+  as 0 instead, but a tzinfo subclass wishing to participate in
+  time zone conversion has to take a stand on whether it supports
+  DST; if you don't care about DST, then code dst() to return 0 minutes,
+  meaning that DST is never in effect).
 
   The tzinfo methods utcoffset() and dst() must return a timedelta object
   (or None) now.  In 2.3a1 they could also return an int or long, but that
@@ -39,6 +43,12 @@ Extension modules
 
   The example tzinfo class for local time had a bug.  It was replaced
   by a later example coded by Guido.
+
+  datetimetz.astimezone(tz) no longer raises an exception when the
+  input datetime has no UTC equivalent in tz.  For typical "hybrid" time
+  zones (a single tzinfo subclass modeling both standard and daylight
+  time), this case can arise one hour per year, at the hour daylight time
+  ends.  See new docs for details.
 
 Library
 -------
